--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,8 +92,8 @@ add_executable(test_lineartet samples/tests/test_lineartet.cpp)
 target_link_libraries(test_lineartet admmelastic)
 add_test(test_lineartet test_lineartet)
 
-#add_executable(test_convergence samples/tests/test_convergence.cpp)
-#target_link_libraries(test_convergence admmelastic)
-#add_test(test_convergence test_convergence)
+add_executable(test_ncmcgs samples/tests/test_ncmcgs.cpp)
+target_link_libraries(test_ncmcgs admmelastic)
+add_test(test_ncmcgs test_ncmcgs)
 
 
