various runtime improvements and sor for GS

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -2,4 +2,4 @@
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/utils)
 add_subdirectory(sca2016)
 add_subdirectory(tvcg2017)
-
+add_subdirectory(tests)
